# TianGong-AI-Workspace

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  install_macos.sh  install_ubuntu.sh  install_windows.ps1  pyproject.toml
.sercrets/: secrets.example.toml
src/tiangong_ai_workspace/: __init__.py  cli.py  secrets.py
src/tiangong_ai_workspace/agents/: deep_agent.py  tools.py
src/tiangong_ai_workspace/tooling/: __init__.py  neo4j.py  tool_schemas.py
tests/: test_tooling.py
