[project]
name = "tiangong-ai-workspace"
version = "0.1.0"
description = "Unified CLI workspace for Codex, Gemini, and Claude Code automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.0",
    "kaggle==1.7.4.5",
    "httpx>=0.27.2",
    "matplotlib>=3.10.7",
    "mcp>=1.20.0",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tenacity>=9.0.0",
    "typer>=0.12.5",
]

[dependency-groups]
dev = ["black>=25.9.0", "ruff>=0.14.1", "pytest>=8.4.2"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
tiangong-ai-workspace = { path = "src" }

[tool.uv.workspace]
members = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/tiangong_ai_workspace"]

[tool.hatch.build.targets.sdist]
include = ["src/tiangong_ai_workspace", "README.md", "pyproject.toml"]

[project.scripts]
tiangong-workspace = "tiangong_ai_workspace.cli:app"

[tool.black]
line-length = 192
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 192
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
