[project]
name = "tiangong-ai-workspace"
version = "0.1.0"
description = "Unified CLI workspace for Codex, Gemini, and Claude Code automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.0",
    "deepagents>=0.2.7",
    "kaggle==1.7.4.5",
    "httpx>=0.27.2",
    "matplotlib>=3.10.7",
    "mcp>=1.20.0",
    "neo4j>=6.0.3",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tenacity>=9.0.0",
    "typer>=0.12.5",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
]

[dependency-groups]
dev = ["black>=25.9.0", "ruff>=0.14.1", "pytest>=8.4.2"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
tiangong-ai-workspace = { path = "src" }

[tool.uv.workspace]
members = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/tiangong_ai_workspace"]

[tool.hatch.build.targets.sdist]
include = ["src/tiangong_ai_workspace", "README.md", "pyproject.toml"]

[tool.tiangong.workspace]
config_version = 1

[[tool.tiangong.workspace.cli_tools]]
command = "openai"
label = "OpenAI CLI (Codex)"

[[tool.tiangong.workspace.cli_tools]]
command = "gcloud"
label = "Google Cloud CLI (Gemini)"

[[tool.tiangong.workspace.cli_tools]]
command = "claude"
label = "Claude Code CLI"

[[tool.tiangong.workspace.tool_registry]]
name = "docs.report"
description = "Generate structured business or technical reports using the document workflow agent."
category = "workflow"
entrypoint = "tiangong_ai_workspace.agents.workflows.run_document_workflow"
tags = ["document", "report"]

[[tool.tiangong.workspace.tool_registry]]
name = "docs.patent_disclosure"
description = "Draft patent disclosure sheets with optional web research."
category = "workflow"
entrypoint = "tiangong_ai_workspace.agents.workflows.run_document_workflow"
tags = ["document", "patent"]

[[tool.tiangong.workspace.tool_registry]]
name = "docs.plan"
description = "Create project or execution plans with milestones and resource breakdowns."
category = "workflow"
entrypoint = "tiangong_ai_workspace.agents.workflows.run_document_workflow"
tags = ["document", "planning"]

[[tool.tiangong.workspace.tool_registry]]
name = "docs.project_proposal"
description = "Prepare project proposal drafts optimised for internal reviews."
category = "workflow"
entrypoint = "tiangong_ai_workspace.agents.workflows.run_document_workflow"
tags = ["document", "proposal"]

[[tool.tiangong.workspace.tool_registry]]
name = "research.tavily"
description = "Query the Tavily MCP service for live internet research."
category = "integration"
entrypoint = "tiangong_ai_workspace.tooling.tavily.TavilySearchClient.search"
tags = ["research", "search"]

[[tool.tiangong.workspace.tool_registry]]
name = "database.neo4j"
description = "Execute Cypher queries against the configured Neo4j graph database."
category = "integration"
entrypoint = "tiangong_ai_workspace.tooling.neo4j.Neo4jClient.execute"
tags = ["database", "graph", "neo4j"]

[[tool.tiangong.workspace.tool_registry]]
name = "agents.deep"
description = "Workspace autonomous agent built with LangGraph (shell, Python, Tavily, document workflows)."
category = "agent"
entrypoint = "tiangong_ai_workspace.agents.deep_agent.build_workspace_deep_agent"
tags = ["langgraph", "planner"]

[[tool.tiangong.workspace.tool_registry]]
name = "runtime.shell"
description = "Shell executor that returns structured stdout/stderr for commands."
category = "runtime"
entrypoint = "tiangong_ai_workspace.tooling.executors.ShellExecutor.run"
tags = ["shell", "commands"]

[[tool.tiangong.workspace.tool_registry]]
name = "runtime.python"
description = "Python executor for dynamic scripting with captured stdout/stderr."
category = "runtime"
entrypoint = "tiangong_ai_workspace.tooling.executors.PythonExecutor.run"
tags = ["python", "scripting"]

[project.scripts]
tiangong-workspace = "tiangong_ai_workspace.cli:app"

[tool.black]
line-length = 192
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 192
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
